// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeForm Container should perform a trade 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <h2>
      Trade
    </h2>
    <Input
      disabled={true}
      type="text"
      value="USD"
    />
    <Input
      name="amount"
      onChange={[Function]}
      placeholder="Enter your amount"
      type="number"
    />
    <h2>
      For
    </h2>
    <Input
      disabled={true}
      type="text"
      value="BTC"
    />
    <Input
      disabled={true}
      name="quoteAmount"
      type="text"
      value={0.0074794315632011965}
    />
    <Button
      handleOnClick={[Function]}
    >
      Trade
    </Button>
  </form>
</div>
`;

exports[`TradeForm Container should render TradeForm 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <h2>
      Trade
    </h2>
    <Input
      disabled={true}
      type="text"
      value="USD"
    />
    <Input
      name="amount"
      onChange={[Function]}
      placeholder="Enter your amount"
      type="number"
    />
    <h2>
      For
    </h2>
    <Input
      disabled={true}
      type="text"
      value="BTC"
    />
    <Input
      disabled={true}
      name="quoteAmount"
      type="text"
      value=""
    />
    <Button
      handleOnClick={[Function]}
    >
      Trade
    </Button>
  </form>
</div>
`;
